<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/topText"
        android:textAllCaps="true"
        android:textColor="@color/topTextColor"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/homeImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/tictactoe" />

    <Button
        android:id="@+id/homeButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button1"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="145dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorAccent"
        android:textSize="18sp"
        android:onClick="onClickButton1"/>

    <Button
        android:id="@+id/homeButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button2"
        app:layout_constraintTop_toBottomOf="@+id/homeButton1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="145dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorAccent"
        android:textSize="18sp"
        android:onClick="onClickButton2"/>

    <Button
        android:id="@+id/buttonX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonX"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:onClick="onClickButtonX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeButton1"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonO"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:onClick="onClickButtonO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeButton1"
        app:layout_constraintTop_toBottomOf="@+id/buttonX" />

</androidx.constraintlayout.widget.ConstraintLayout>